Added revalidate after blogs are created via API and added endpoint to allow for edits. update swagger
